crates/loadsmith-thunderstore/src/snapshots/loadsmith_thunderstore__schema__test__boneworks.snap
---
source: crates/loadsmith-thunderstore/src/schema.rs
expression: loader
---
MelonLoader {
    package_install_ruleset: OwnedInstallRuleset {
        exclude: Some(
            GlobSet {
                len: 4,
                strats: [
                    Literal(
                        LiteralStrategy(
                            {
                                [
                                    82,
                                    69,
                                    65,
                                    68,
                                    77,
                                    69,
                                    46,
                                    109,
                                    100,
                                ]: [
                                    2,
                                ],
                                [
                                    105,
                                    99,
                                    111,
                                    110,
                                    46,
                                    112,
                                    110,
                                    103,
                                ]: [
                                    1,
                                ],
                                [
                                    76,
                                    73,
                                    67,
                                    69,
                                    78,
                                    67,
                                    69,
                                ]: [
                                    3,
                                ],
                                [
                                    109,
                                    97,
                                    110,
                                    105,
                                    102,
                                    101,
                                    115,
                                    116,
                                    46,
                                    106,
                                    115,
                                    111,
                                    110,
                                ]: [
                                    0,
                                ],
                            },
                        ),
                    ),
                ],
            },
        ),
        rules: [
            Route(
                RouteRule {
                    name: "Mods",
                    target: "Mods",
                    file_extensions: [
                        "dll",
                    ],
                    subdir: false,
                    flatten: false,
                    mutable: true,
                },
            ),
            Route(
                RouteRule {
                    name: "Plugins",
                    target: "Plugins",
                    file_extensions: [
                        "plugin.dll",
                    ],
                    subdir: false,
                    flatten: false,
                    mutable: true,
                },
            ),
            Route(
                RouteRule {
                    name: "UserLibs",
                    target: "UserLibs",
                    file_extensions: [
                        "lib.dll",
                    ],
                    subdir: false,
                    flatten: false,
                    mutable: true,
                },
            ),
            Route(
                RouteRule {
                    name: "MelonLoader",
                    target: "MelonLoader",
                    file_extensions: [],
                    subdir: false,
                    flatten: false,
                    mutable: true,
                },
            ),
            Route(
                RouteRule {
                    name: "Managed",
                    target: "MelonLoader/Managed",
                    file_extensions: [
                        "managed.dll",
                    ],
                    subdir: false,
                    flatten: false,
                    mutable: true,
                },
            ),
            Route(
                RouteRule {
                    name: "Libs",
                    target: "MelonLoader/Libs",
                    file_extensions: [],
                    subdir: false,
                    flatten: false,
                    mutable: true,
                },
            ),
            Route(
                RouteRule {
                    name: "UserData",
                    target: "UserData",
                    file_extensions: [],
                    subdir: false,
                    flatten: false,
                    mutable: true,
                },
            ),
            Route(
                RouteRule {
                    name: "CustomItems",
                    target: "UserData/CustomItems",
                    file_extensions: [
                        "melon",
                    ],
                    subdir: false,
                    flatten: false,
                    mutable: true,
                },
            ),
            Route(
                RouteRule {
                    name: "CustomMaps",
                    target: "UserData/CustomMaps",
                    file_extensions: [
                        "bcm",
                        "cma",
                    ],
                    subdir: false,
                    flatten: false,
                    mutable: true,
                },
            ),
            Route(
                RouteRule {
                    name: "PlayerModels",
                    target: "UserData/PlayerModels",
                    file_extensions: [
                        "body",
                    ],
                    subdir: false,
                    flatten: false,
                    mutable: true,
                },
            ),
            Route(
                RouteRule {
                    name: "CustomLoadScreens",
                    target: "UserData/CustomLoadScreens",
                    file_extensions: [
                        "load",
                    ],
                    subdir: false,
                    flatten: false,
                    mutable: true,
                },
            ),
            Route(
                RouteRule {
                    name: "Music",
                    target: "UserData/Music",
                    file_extensions: [
                        "wav",
                    ],
                    subdir: false,
                    flatten: false,
                    mutable: true,
                },
            ),
            Route(
                RouteRule {
                    name: "Food",
                    target: "UserData/Food",
                    file_extensions: [
                        "food",
                    ],
                    subdir: false,
                    flatten: false,
                    mutable: true,
                },
            ),
            Route(
                RouteRule {
                    name: "Scoreworks",
                    target: "UserData/Scoreworks",
                    file_extensions: [
                        "sw",
                    ],
                    subdir: false,
                    flatten: false,
                    mutable: true,
                },
            ),
            Route(
                RouteRule {
                    name: "CustomSkins",
                    target: "UserData/CustomSkins",
                    file_extensions: [
                        "png",
                    ],
                    subdir: false,
                    flatten: false,
                    mutable: true,
                },
            ),
            Route(
                RouteRule {
                    name: "Grenades",
                    target: "UserData/Grenades",
                    file_extensions: [
                        "grenade",
                    ],
                    subdir: false,
                    flatten: false,
                    mutable: true,
                },
            ),
        ],
        default_rule: Some(
            0,
        ),
    },
}
