crates/loadsmith-thunderstore/src/snapshots/loadsmith_thunderstore__schema__test__schedule-i.snap
---
source: crates/loadsmith-thunderstore/src/schema.rs
expression: loader
---
MelonLoader {
    package_install_ruleset: OwnedInstallRuleset {
        rules: [
            Route(
                RouteRule {
                    name: "",
                    target: "Mods",
                    file_extensions: [],
                    subdir: true,
                    flatten: false,
                    mutable: false,
                },
            ),
            Route(
                RouteRule {
                    name: "UserData",
                    target: "UserData",
                    file_extensions: [],
                    subdir: true,
                    flatten: true,
                    mutable: true,
                },
            ),
        ],
        default_rule: Some(
            0,
        ),
    },
}
