crates/loadsmith-thunderstore/src/snapshots/loadsmith_thunderstore__schema__test__voices-of-the-void.snap
---
source: crates/loadsmith-thunderstore/src/schema.rs
expression: loader
---
Shimloader {
    package_install_ruleset: OwnedInstallRuleset {
        exclude: None,
        rules: [
            Route(
                RouteRule {
                    name: "mod",
                    target: "shimloader/mod",
                    file_extensions: [],
                    subdir: true,
                    flatten: true,
                    mutable: false,
                },
            ),
            Route(
                RouteRule {
                    name: "pak",
                    target: "shimloader/pak",
                    file_extensions: [],
                    subdir: true,
                    flatten: true,
                    mutable: false,
                },
            ),
            Route(
                RouteRule {
                    name: "cfg",
                    target: "shimloader/cfg",
                    file_extensions: [],
                    subdir: false,
                    flatten: true,
                    mutable: true,
                },
            ),
            Route(
                RouteRule {
                    name: "overlay",
                    target: "shimloader/overlay",
                    file_extensions: [],
                    subdir: true,
                    flatten: true,
                    mutable: false,
                },
            ),
        ],
        default_rule: Some(
            0,
        ),
    },
}
